feat(profile): support private user avatars
